changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

test/templates/crossfire-logo-unit-failed.png,
  test/templates/crossfire-logo-unit-success.png,
  test/templates/txtlog.png, test/templates/failure.png,
  test/templates/success.png, test/templates/error.png,
  test/templates/crossfire-logo-unit.png: Recompress png images for smaller file
  size.
Arvid Norlander 2009-02-10

check-fragment.am: Add a define -DBUILD_ROOT to support out of tree builds
  properly.
test/unit/common/check_object.c, test/unit/common/check_loader.c,
  test/unit/common/check_arch.c, test/unit/common/check_item.c: make check
  should now works for out of tree builds. Not well tested yet. Not functional
  changes for in-tree builds.
Arvid Norlander 2009-02-10

include/Makefile.am: Make svnversion.h work properly when the build tree is
  not the source tree.
Arvid Norlander 2009-02-10

include/object.h: Small spelling correction in comment.
utils/mapper.c: Fix a crash when generating tiled (non-world) maps (such as for
  greenway) and the user used -limit.
Arvid Norlander 2009-02-10

plugins/cfpython/cfpython_object.c,
  plugins/cfpython/include/cfpython_object_private.h: Add Object_GetAnimated()
  to be able to read this property (it used to be write only from python).
Arvid Norlander 2009-02-10

plugins/cfpython/cfpython_object.c,
  plugins/cfpython/include/cfpython_object_private.h: Make it possible to set
  Object.Identified as well as get it. This was used by some python scripts
  (though it didn't actually work).
Arvid Norlander 2009-02-09

utils/mapper.c: Fix a segfault when generating world map and not all input maps