@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+test/templates/logresult.xsl: Fix case of tag, must be lower case since it
+  generates XHTML, not HTML.
+check-fragment.am: Make report generation work for out of tree builds. We now
+  copy the xsl files to test/logs/ before everything else, instead of after. We
+  also use the copy now, instead of using the file in test/templates/.
+Arvid Norlander 2009-02-10
+
 test/templates/crossfire-logo-unit-failed.png,
   test/templates/crossfire-logo-unit-success.png,
   test/templates/txtlog.png, test/templates/failure.png,
